# template-pico-module

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: MCP251XFD.cmake  bmp3_sensor_api.cmake  libcanard.cmake  nunavut.cmake  o1heap.cmake
conf/: Conf_MCP251XFD.h
src/: can.c  can.h  can_pico_pins.h  canard.c  canbus.c  canbus.h  config.c  config.h  errors.h  interrupt.c  interrupt.h  log.c  log.h  main.c  receiver_main.c  subscription.c  subscription.h
src/cyphal/: cyphal_memory.c  cyphal_memory.h  cyphal_porting.c  cyphal_porting.h
src/drivers/: CMakeLists.txt
src/drivers/canard/: CMakeLists.txt  canard.c  memory.c
src/drivers/canard/include/drivers/: canard.h
src/drivers/canard/include/drivers/canard/: memory.h
src/drivers/instruments/: CMakeLists.txt  bmp3_platform.c  instruments.c
src/drivers/instruments/include/drivers/instruments/: bmp3_sensor.h  instruments.h
src/drivers/mcp251xfd/: CMakeLists.txt  config.h  mcp251xfd.c  platform.c  platform.h
src/drivers/mcp251xfd/include/drivers/: mcp251xfd.h
src/drivers/mcp251xfd/include/drivers/mcp251xfd/: debug.h
